@@ -4,7 +4,7 @@
 
 pkgbase="openoffice-base-beta"
 pkgname=('openoffice-base-beta' 'openoffice-sdk-beta')
-_OO_milestone=OOO320_m14
+_OO_milestone=OOO320_m15
 pkgver=3.2.1_${_OO_milestone/OOO/ooo} # m12=3.2.0 RC5
 pkgrel=1
 arch=('i686' 'x86_64')
@@ -15,10 +15,10 @@ makedepends=(# the real makedeps
              'pam' 'sane' 'zip' 'perl-archive-zip' 'pkgconfig' 'unzip' "xulrunner>=1.9.2.2" 
              'apache-ant>=1.8.0' 'cairo' 'gperf' 'libcups' 'poppler' 'kdelibs' 'pstoedit' 'gconf' "openjdk6>=6.b17_1.7.1"
 	     # from main OOo the deps
-	     "curl>=7.20.0" "hunspell>=1.2.8" "python>=2.6.5" 'libwpd' 'redland>=1.0.10' 'libxaw' "neon>=0.28.6"
+	     "curl>=7.20.0" "hunspell>=1.2.8" "python>=2.6.5" 'libwpd' 'libxaw' "neon>=0.28.6"
              'dbus-glib' "icu>=4.2.1" 'hsqldb-java' 'libxslt' 'hicolor-icon-theme' 'desktop-file-utils'
 	     'beanshell' 'saxon' 'vigra' 'libgraphite' 'hyphen' 'lpsolve' 'libmspack' 'libldap' 'lucene' 'boost>=1.41.0')
-	     # libmythes
+	     # libmythes 'redland>=1.0.10' 
 source=(${pkgname}-${_OO_milestone}.tar.xz
 	http://tools.openoffice.org/unowinreg_prebuild/680/unowinreg.dll
 	startcenter.desktop
@@ -149,7 +149,6 @@ build() {
 	--with-system-mozilla=libxul\
 	--with-system-xrender-headers\
 	--with-system-headers\
-	--with-system-redland\
 	--with-alloc=system\
 	--with-jdk-home=${JAVA_HOME}\
 	--with-lucene-core-jar=/usr/share/java/lucene-core.jar\
@@ -158,6 +157,7 @@ build() {
 	--with-use-shell=bash\
 	 $EXTRAOPTS || return 1
 
+#	--with-system-redland\
 #	--enable-layout\ /bin/bash: tralay: command not found ???
 #	--with-system-jfreereport
 #	--with-system-mythes\
@@ -181,9 +181,9 @@ package_openoffice-base-beta() {
 
  pkgdesc="OpenOffice.org - a free multiplatform and multilingual office suite - testing branch leading to next stable release"
  install=openoffice.install
- depends=("curl>=7.20.0" "hunspell>=1.2.8" "python>=2.6.5" 'libwpd' 'redland' 'libxaw' "neon>=0.28.6" 'gtk2'
+ depends=("curl>=7.20.0" "hunspell>=1.2.8" "python>=2.6.5" 'libwpd' 'libxaw' "neon>=0.28.6" 'gtk2'
           'dbus-glib' "icu>=4.2.1" 'hsqldb-java' 'libxslt' 'hicolor-icon-theme' 'desktop-file-utils' 
-	  'beanshell' 'saxon' 'vigra' 'libgraphite' 'hyphen' 'lpsolve' 'libmspack' 'libldap' 'lucene') # 'libmythes'
+	  'beanshell' 'saxon' 'vigra' 'libgraphite' 'hyphen' 'lpsolve' 'libmspack' 'libldap' 'lucene') # 'libmythes' 'redland' 
  optdepends=('java-runtime:	adds java support'
             'libcups:		adds printing support'
             'gconf:		adds additional gnome support'
