@@ -1,3 +1,9 @@
+2010-04-16 Andreas Radke <andyrtr at archlinux.org>
+
+        * 3.2.1-OOO320_m15-1 :
+	- new snapshot
+	- build with internal redland
+
 2010-03-26 Andreas Radke <andyrtr at archlinux.org>
 
         * 3.2.1-OOO320_m14-1 :
